{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 535,
  "lineage": "00c23518-bbc4-94cb-c3df-e3daae248221",
  "resources": [
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:internet-gateway/igw-0d4bc2d773be9c4ae",
            "id": "igw-0d4bc2d773be9c4ae",
            "owner_id": "321536109689",
            "tags": {
              "Name": "security-vpc-igw",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "security-vpc-igw",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "secgrp1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:security-group/sg-06ee329d80fba12ea",
            "description": "Security group by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ee329d80fba12ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "secgrp1",
            "name_prefix": "",
            "owner_id": "321536109689",
            "revoke_rules_on_delete": false,
            "tags": {
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fgt_internal_cn-northwest-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:subnet/subnet-0c74ff2ce67eae681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c74ff2ce67eae681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321536109689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_cn-northwest-1a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_cn-northwest-1a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_internal_cn-northwest-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:subnet/subnet-0c001b40d69953af4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c001b40d69953af4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321536109689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_cn-northwest-1b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_cn-northwest-1b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_cn-northwest-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:subnet/subnet-0b6d2a16bdf1b0d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d2a16bdf1b0d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321536109689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_cn-northwest-1a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_cn-northwest-1a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_cn-northwest-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:subnet/subnet-057abec6114517603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057abec6114517603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321536109689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_cn-northwest-1b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_cn-northwest-1b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:vpc/vpc-0187e8284ed9ae4fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c80eb0fab0803247",
            "default_route_table_id": "rtb-01dc65ae5d5eb50cf",
            "default_security_group_id": "sg-02ec973f95be9b9d7",
            "dhcp_options_id": "dopt-34dc235d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0187e8284ed9ae4fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dc65ae5d5eb50cf",
            "owner_id": "321536109689",
            "tags": {
              "Name": "security-vpc",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST",
              "test_tag": "tgw-test-tag"
            },
            "tags_all": {
              "Name": "security-vpc",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST",
              "test_tag": "tgw-test-tag"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "data",
      "type": "aws_network_interface",
      "name": "gwlb_intfs",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:network-interface/eni-0b8697c101c27b2a7",
            "attachment": [
              {
                "attachment_id": "ela-attach-016bcd0dfff97c934",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "cn-northwest-1a",
            "description": "ELB gwy/gwlb-fgt/dc281ed53f7a4e34",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-0c74ff2ce67eae681"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0187e8284ed9ae4fc"
                ]
              }
            ],
            "id": "eni-0b8697c101c27b2a7",
            "interface_type": "gateway_load_balancer",
            "mac_address": "02:3b:cb:10:dc:ec",
            "owner_id": "321536109689",
            "private_ip": "10.0.1.30",
            "private_ips": [
              "10.0.1.30"
            ],
            "requester_id": "413178113309",
            "subnet_id": "subnet-0c74ff2ce67eae681",
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:network-interface/eni-0549446e1e13d1775",
            "attachment": [
              {
                "attachment_id": "ela-attach-0e9d2f2c73dbe8e40",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "cn-northwest-1b",
            "description": "ELB gwy/gwlb-fgt/dc281ed53f7a4e34",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-0c001b40d69953af4"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0187e8284ed9ae4fc"
                ]
              }
            ],
            "id": "eni-0549446e1e13d1775",
            "interface_type": "gateway_load_balancer",
            "mac_address": "06:1a:53:64:6d:0c",
            "owner_id": "321536109689",
            "private_ip": "10.0.3.184",
            "private_ips": [
              "10.0.3.184"
            ],
            "requester_id": "413200900883",
            "subnet_id": "subnet-0c001b40d69953af4",
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          }
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:loadbalancer/gwy/gwlb-fgt/dc281ed53f7a4e34",
            "arn_suffix": "gwy/gwlb-fgt/dc281ed53f7a4e34",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:loadbalancer/gwy/gwlb-fgt/dc281ed53f7a4e34",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gwlb-fgt",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c001b40d69953af4"
              },
              {
                "subnet_id": "subnet-0c74ff2ce67eae681"
              }
            ],
            "subnets": [
              "subnet-0c001b40d69953af4",
              "subnet-0c74ff2ce67eae681"
            ],
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gwlb_ln",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:listener/gwy/gwlb-fgt/dc281ed53f7a4e34/c1bd8ddec5e3ad4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:targetgroup/gwlb-tgp-fgt/00a855eae9f11894d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:listener/gwy/gwlb-fgt/dc281ed53f7a4e34/c1bd8ddec5e3ad4f",
            "load_balancer_arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:loadbalancer/gwy/gwlb-fgt/dc281ed53f7a4e34",
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": {
              "Name": "gwlb-ln"
            },
            "tags_all": {
              "Name": "gwlb-ln"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb_target_group.gwlb_tgp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gwlb_tgp",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:targetgroup/gwlb-tgp-fgt/00a855eae9f11894d5",
            "arn_suffix": "targetgroup/gwlb-tgp-fgt/00a855eae9f11894d5",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-cn:elasticloadbalancing:cn-northwest-1:321536109689:targetgroup/gwlb-tgp-fgt/00a855eae9f11894d5",
            "lambda_multi_value_headers_enabled": false,
            "name": "gwlb-tgp-fgt",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlb_endps",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "gwlbe-subnet-05b0a11e805b9c549",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:vpc-endpoint/vpce-034343cf216f5a6fb",
            "id": "vpce-034343cf216f5a6fb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f1a12d431dc1735f"
            ],
            "owner_id": "321536109689",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "cn.com.amazonaws.vpce.cn-northwest-1.vpce-svc-0ef37dd55305b8d94",
            "state": "available",
            "subnet_ids": [
              "subnet-05b0a11e805b9c549"
            ],
            "tags": {
              "Name": "gwlbe-subnet-05b0a11e805b9c549"
            },
            "tags_all": {
              "Name": "gwlbe-subnet-05b0a11e805b9c549"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-047a4d1f2579cb949"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "gwlbe-subnet-07035c13a421ee26b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:vpc-endpoint/vpce-07c9e34f751dcba14",
            "id": "vpce-07c9e34f751dcba14",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c33237ed8763e974"
            ],
            "owner_id": "321536109689",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "cn.com.amazonaws.vpce.cn-northwest-1.vpce-svc-0ef37dd55305b8d94",
            "state": "available",
            "subnet_ids": [
              "subnet-07035c13a421ee26b"
            ],
            "tags": {
              "Name": "gwlbe-subnet-07035c13a421ee26b"
            },
            "tags_all": {
              "Name": "gwlbe-subnet-07035c13a421ee26b"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-047a4d1f2579cb949"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "local_pc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d4bc2d773be9c4ae",
            "id": "r-rtb-0f94bae44f56632731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f94bae44f5663273",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:route-table/rtb-0f94bae44f5663273",
            "id": "rtb-0f94bae44f5663273",
            "owner_id": "321536109689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4bc2d773be9c4ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fgt_login"
            },
            "tags_all": {
              "Name": "fgt_login"
            },
            "timeouts": null,
            "vpc_id": "vpc-0187e8284ed9ae4fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003fb2c009e4a5631",
            "route_table_id": "rtb-0f94bae44f5663273",
            "subnet_id": "subnet-0b6d2a16bdf1b0d76"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028f8a69e91d737c7",
            "route_table_id": "rtb-0f94bae44f5663273",
            "subnet_id": "subnet-057abec6114517603"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02449aecb008c0b18",
            "id": "r-rtb-0a4f00228bdac20231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4f00228bdac2023",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:route-table/rtb-0a4f00228bdac2023",
            "id": "rtb-0a4f00228bdac2023",
            "owner_id": "321536109689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02449aecb008c0b18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gwlbe_outbound"
            },
            "tags_all": {
              "Name": "gwlbe_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a4d1f2579cb949"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01073c562631ba6ce",
            "route_table_id": "rtb-0a4f00228bdac2023",
            "subnet_id": "subnet-07035c13a421ee26b"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d087d5ee19f63c0",
            "route_table_id": "rtb-0a4f00228bdac2023",
            "subnet_id": "subnet-05b0a11e805b9c549"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "100.0.5.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076717789f41630533238290286",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076717789f4163053",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-07c9e34f751dcba14",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "100.0.6.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076717789f41630531200624064",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076717789f4163053",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-034343cf216f5a6fb",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:321536109689:route-table/rtb-076717789f4163053",
            "id": "rtb-076717789f4163053",
            "owner_id": "321536109689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "100.0.5.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-07c9e34f751dcba14",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "100.0.6.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-034343cf216f5a6fb",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw_inbound"
            },
            "tags_all": {
              "Name": "igw_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-047a4d1f2579cb949"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_gateways",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-02449aecb008c0b18",
            "id": "rtbassoc-0bca97d7e8794b5d0",
            "route_table_id": "rtb-076717789f4163053"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"pc_outbound_az1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ae88e443182f2b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ae88e443182f2b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-07c9e34f751dcba14",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"pc_outbound_az2\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07398ddc9134db9bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07398ddc9134db9bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-034343cf216f5a6fb",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    }
  ]
}